--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,27 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <title>Epesantren Mobile</title>
+
+  <meta name="description" content="Epesantren Web Apps for Wali Murid">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Epesantren Mobile">
+
+  <!-- iOS meta tags & icons -->
+  
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="epesantren_wali">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Epesantren Wali">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="apple-touch-icon" href="icons/android-launchericon-192-192.png">
+  <link rel="icon" type="image/png" href="icons/android-launchericon-512-512.png" sizes="32x32" />
 
-  <title>epesantren_wali</title>
+
   <link rel="manifest" href="manifest.json">
 
   <script>
